:zap: [ui] add: admin ui elements and api integration

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="shopify-api-key" content="%REACT_APP_SHOPIFY_API_KEY%" />
+    <script src="https://cdn.shopify.com/shopifycloud/app-bridge.js"></script>
+
     <meta
       name="description"
       content="Web site created using create-react-app"
