--- a/public/404.html
+++ b/public/404.html
@@ -2,45 +2,31 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Never Miss Admin - Page Not Found</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            text-align: center;
-            padding: 50px;
-            background-color: #f8f9fa;
-        }
-        .container {
-            max-width: 600px;
-            margin: 0 auto;
-        }
-        h1 {
-            color: #6c757d;
-            font-size: 2.5rem;
-            margin-bottom: 1rem;
-        }
-        p {
-            color: #6c757d;
-            font-size: 1.2rem;
-            line-height: 1.5;
-        }
-        .logo {
-            width: 80px;
-            height: 80px;
-            margin-bottom: 2rem;
-            background: linear-gradient(45deg, #008060, #00a383);
-            border-radius: 20px;
-            display: inline-block;
-        }
-    </style>
+    <title>Never Miss Admin</title>
+    <script type="text/javascript">
+        // Shopify App Bridge navigation handler for GitHub Pages
+        (function() {
+            var path = window.location.pathname;
+            var search = window.location.search;
+
+            // Check if this looks like a Shopify app navigation
+            var hasShopifyParams = search.includes('embedded=1') ||
+                                  search.includes('hmac=') ||
+                                  search.includes('host=') ||
+                                  search.includes('id_token=') ||
+                                  search.includes('shop=');
+
+            if (hasShopifyParams && path !== '/') {
+                // Extract the route path and append Shopify params
+                var routePath = path.startsWith('/') ? path : '/' + path;
+                var redirectUrl = routePath + search;
+
+                // Redirect to index.html with route preserved
+                window.location.replace('/?' + 'redirect=' + encodeURIComponent(redirectUrl));
+            }
+        })();
+    </script>
 </head>
 <body>
-    <div class="container">
-        <div class="logo"></div>
-        <h1>Page Not Found</h1>
-        <p>This application should be accessed through the Shopify Admin interface.</p>
-        <p>If you arrived here by mistake, please contact support.</p>
-    </div>
 </body>
 </html>
